- 09/12/21
  - header is updated w/ data storage
  - implementation is partially updated ^
- 09/13/21
  - threading should work
  - data storage still incomplete, prototype attached below
    - {
        123456789 /** pid (accessible to caller) */ : {
          self /** pid (accessible to thread) */: {
              shmid: 0987654321,
              size: 1024
            },
            sigHndl /** (signals mapped to handle function) */: {
              0: void(*handle)(Node)
            }
          }
        }
      }
- 09/13/21 .2
  - Realized that data storage was unnecessary abstraction, removed mostly everything pertaining to that
  - <thread>.shm and <thread>.node should be set by the calling process
  - I feel like I'm close to getting a really elegant solution to the key vs pid mapping for thread, but I can't get it rn