@@ -20,3 +20,7 @@
   - Realized that data storage was unnecessary abstraction, removed mostly everything pertaining to that
   - <thread>.shm and <thread>.node should be set by the calling process
   - I feel like I'm close to getting a really elegant solution to the key vs pid mapping for thread, but I can't get it rn
+- 09/16/21
+  - Actualized elegant storage solution
+  - Further development exposed some issues with Core, now working on patching those
+  - headless soon to be in alpha state, should work as intended
